chore: Fix contrast for reviews ratings

--- a/src/css/restaurant.css
+++ b/src/css/restaurant.css
@@ -220,7 +220,7 @@
 }
 
 #reviews-list .rating {
-  color: #fa0;
+  color: #d47500;
   float: left;
 }
 
